# ptracey

./: .gitignore  CMakeLists.txt  README.md
docs/: Doxyfile  doxygen_sqlite3.db
docs/html/: AVX512_2Complex_8h_source.html  AVX512_2PacketMath_8h_source.html  AVX512_2TypeCasting_8h_source.html  AVX_2Complex_8h_source.html  AVX_2PacketMath_8h_source.html  AVX_2TypeCasting_8h_source.html  AlignedBox_8h_source.html  AltiVec_2Complex_8h_source.html  AltiVec_2PacketMath_8h_source.html  AmbiVector_8h_source.html  Amd_8h_source.html  AndroidJNIIOSystem_8h_source.html  AngleAxis_8h_source.html  ArithmeticSequence_8h_source.html  ArrayBase_8h_source.html  ArrayCwiseBinaryOps_8h_source.html  ArrayCwiseUnaryOps_8h_source.html  ArrayWrapper_8h_source.html  Array_8h_source.html  AssignEvaluator_8h_source.html  Assign_8h_source.html  Assign__MKL_8h_source.html  AssignmentFunctors_8h_source.html  BDCSVD_8h_source.html  BFloat16_8h_source.html  BandMatrix_8h_source.html  BaseImporter_8h_source.html  BasicPreconditioners_8h_source.html  BiCGSTAB_8h_source.html  BinaryFunctors_8h_source.html  Bitmap_8h.html  (+5393 more)
include/: aabb.hpp  aarect.hpp  box.hpp  bvh.hpp  camera.hpp  color.hpp  colorio.hpp  common.hpp  external.hpp  hittable.hpp  hittable_list.hpp  info.hpp  material.hpp  matrix.hpp  mediumc.hpp  mesh.hpp  moving_sphere.hpp  onb.hpp  pdf.hpp  perlin.hpp  ray.hpp  render.hpp  sample_spectrum.hpp  scenes.hpp  sinwave.hpp  spd.hpp  specdata.hpp  spectrum.hpp  sphere.hpp  texture.hpp  tocolor.hpp  triangle.hpp  utils.hpp  vec3.hpp  wave.hpp
src/: final.cpp  final2.cpp
(+220 files in other folders)
